--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
               <div class="skills__skill">Machine learning</div>
               <div class="skills__skill">Cloud Architecture</div>
               <div class="skills__skill">Quantum Computing</div>
-              <div class="skills__skill">IT Support</div>
+              <div class="skills__skill">Web Development</div>
             </div>
           </div>
         </div>
