--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="container text-center text-md-left" data-aos="fade-up">
       <h1>Welcome to <span>VED Technology</span></h1>
-      <h2>We help our partners in solving IT problems. We work together WWe grow together.</h2>
+      <h2>We help our partners in solving IT problems. We work together We grow together.</h2>
       <a href="#about" class="btn-get-started scrollto">Get Started</a>
     </div>
   </section><!-- End Hero -->
